Changes for 2.2.17rc1

New features:

Bug fixes:
...G...... [ZBX-11479] fixed threaded metric to handle interruption by a signal (vso)
........S. [ZBX-11534] fixed default operation step duration to be included in minimal step calculation instead of overriding (vso)
...G...... [ZBX-11528] fixed zabbix_get to match zabbix_server protocol (vso)

--------------------------------------------------------------------------------
Changes for 2.2.16

New features:
A.F....... [ZBX-1357] updated English (United States), Spanish, Ukrainian, Vietnamese translations; thanks to Zabbix translators (zalex_ua)

--------------------------------------------------------------------------------
Changes for 2.2.16rc1

New features:
........S. [ZBXNEXT-1859] improved performance by not inserting events of auto registration if no such action was enabled, insert/update/select in a bulk on auto registration data from proxy (Sasha, vso)
........S. [ZBX-10694] added rollup health sensor item to vmware hypervisor template (wiper)

Bug fixes:
........S. [ZBX-11509] fixed system.run command parameter to be quoted only if it contains special characters (vso)
.......PS. [ZBX-4661] fixed possible crash when Oracle database is not available (vso)
..F....... [ZBX-11521] fixed JS error in media popup (Oleg)
...G...... [ZBX-11397] fixed system.hw.chassis key to read DMI tables through sysfs and fall back to /dev/mem only if sysfs is not available (vso)
........S. [ZBX-11411] added check for LLD macro values in calculated item formula to be numeric (viktors)
A......... [ZBX-11483] improved API script.execute validation (Oleg)
A.F.....S. [ZBX-11347] fixed resolving of {HOST.IP}, {HOST.DNS} and {HOST.CONN} macros in item key parameters for items without interface (asaveljevs, Ivo, Sasha)
...G...... [ZBX-9781] changed vfs.fs.size, vfs.fs.inode checks to be executed in separate process/thread to avoid lockup with stale NFS mounts (wiper)